fix values spacing

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -194,7 +194,7 @@ section {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    gap: .5rem 1.5rem;
+    gap: 2.5rem 1.5rem;
 }
 #values h2 {
     color: var(--color-primary);
